--- a/index.html
+++ b/index.html
@@ -214,7 +214,6 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 <i>Last modified by Wang Chaoyang, 2017-12-5.</i>
 
 <hr>
-<a href="http://www.clustrmaps.com/map/bcmi.sjtu.edu.cn/~wangchaoyang/" title="Visitor Map for bcmi.sjtu.edu.cn/~wangchaoyang/"><img src="//www.clustrmaps.com/map_v2.png?u=OtSP&d=9x8bR--TJRSFzoEcH4XAJ9uHZ0B7arxuRydAsa3q86o" /></a>
-
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=Rv_bWFfPipA9gtm9uwY6xRQGha_raL_Dx6yCs0fa4jY&cl=ffffff&w=a"></script>
 </body>
 </html>
