--- a/index.html
+++ b/index.html
@@ -214,6 +214,6 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 <i>Last modified by Wang Chaoyang, 2017-12-5.</i>
 
 <hr>
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=Rv_bWFfPipA9gtm9uwY6xRQGha_raL_Dx6yCs0fa4jY&cl=ffffff&w=a"></script>
+<a href="https://clustrmaps.com/site/19x5b" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Rv_bWFfPipA9gtm9uwY6xRQGha_raL_Dx6yCs0fa4jY&cl=ffffff"></a>
 </body>
 </html>
