--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ h3 {font-size:18px;font-family:arial;color:black;margin-top:0em;margin-bottom:0e
 <table border="0">
 
 <tr>
-	<td valign="top" width="250"><img src="projects/cvpr18_chaoyang/img.png" width="200"></td>
+	<td valign="top" width="250"><img src="projects/cvpr18_chaoyang/img2.png" width="200"></td>
 	<td valign="top" width="600">
 	<h3>Learning Depth from Monocular Videos using Direct Methods</h3>
 	<p><strong>Chaoyang Wang</strong>, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
@@ -66,7 +66,7 @@ along with a novel depth normalization strategy - substantially
 </tr>
 
 <tr>
-	<td valign="top" width="250"><img src="projects/icra18/img.png" width="200"></td>
+	<td valign="top" width="250"><img src="projects/icra18/img2.png" width="200"></td>
 	<td valign="top" width="600">
 	<h3>Deep-LK for Efficient Adaptive Object Tracking</h3>
 	<p><strong>Chaoyang Wang</strong>, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
@@ -84,7 +84,7 @@ Finally, we show impressive results demonstrating that, with end-to-end learned 
 
 
 <tr>
-	<td width="250"><img src="projects/cvpr18_rui/img.png" width="200"></td>
+	<td width="250"><img src="projects/cvpr18_rui/img2.png" width="200"></td>
 	<td valign="top" width="600">
 	<h3>Semantic Photometric Bundle Adjustment on Natural Sequences</h3>
 	<p>Rui Zhu, <strong>Chaoyang Wang</strong>, Ziyan Wang, Chen-Hsuan Lin, Simon Lucey<br />
