--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Wang Chaoyang's Homepage</title>
 <meta name="author" content="Wang Chaoyang">
 <meta name="description" content="Wang Chaoyang's Homepage">
-<meta name="keywords" content="Chaoyang Wang, Wang Chaoyang, deep-LK, binocular, photometric, stereo, multi-branched hierarchical segmentation">
+<meta name="keywords" content="Chaoyang Wang, Wang Chaoyang, deep-LK, binocular, photometric, stereo, multi-branched hierarchical segmentation, unsupervised learning depth">
 <style type="text/css">
 p {font-size:14px;font-family:arial;color:black;}
 li {font-size:14px;font-family:arial;color:black;}
@@ -50,7 +50,7 @@ h3 {font-size:18px;font-family:arial;color:black;margin-top:0em;margin-bottom:0e
 	<h3>Learning Depth from Monocular Videos using Direct Methods</h3>
 	<p><strong>Chaoyang Wang</strong>, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
 	<strong>[
-	<a href="">To be arxived</a>
+	<a href="https://128.84.21.199/pdf/1712.00175.pdf">arXiv:1712.00175</a>
 	]
 </strong><br />
 Unsupervised strategies to learning a depth estimator are particularly
@@ -71,7 +71,7 @@ along with a novel depth normalization strategy - substantially
 	<h3>Deep-LK for Efficient Adaptive Object Tracking</h3>
 	<p><strong>Chaoyang Wang</strong>, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
 	<strong>[
-	<a href="https://arxiv.org/abs/1705.06839">PDF</a>,
+	<a href="https://arxiv.org/pdf/1705.06839.pdf">arXiv:1705.06839v2</a>,
 	<a href="https://youtu.be/1q3GrYf9k-E">demo</a>
 	]
 </strong><br />
@@ -89,7 +89,7 @@ Finally, we show impressive results demonstrating that, with end-to-end learned 
 	<h3>Semantic Photometric Bundle Adjustment on Natural Sequences</h3>
 	<p>Rui Zhu, <strong>Chaoyang Wang</strong>, Ziyan Wang, Chen-Hsuan Lin, Simon Lucey<br />
 	<strong>[
-	<a href="">To be arxived</a>
+	<a href="https://arxiv.org/pdf/1712.00110.pdf">arXiv:1712.00110 </a>
 	]</strong><br />
 A fundamental drawback to (photometric) bundle adjustment
 is: (i) their reliance on having to view all points on
