--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ h3 {font-size:18px;font-family:arial;color:black;margin-top:0em;margin-bottom:0e
 	<h3>Learning Depth from Monocular Videos using Direct Methods</h3>
 	<p><strong>Chaoyang Wang</strong>, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
 	<strong>[
-	<a href="https://128.84.21.199/pdf/1712.00175.pdf">arXiv:1712.00175</a>
+	<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv:1712.00175</a>
 	]
 </strong><br />
 Unsupervised strategies to learning a depth estimator are particularly
