--- a/index.html
+++ b/index.html
@@ -65,23 +65,6 @@ along with a novel depth normalization strategy - substantially
 	</td>
 </tr>
 
-<tr>
-	<td valign="top" width="250"><img src="projects/icra18/img2.png" width="200"></td>
-	<td valign="top" width="600">
-	<h3>Deep-LK for Efficient Adaptive Object Tracking</h3>
-	<p><strong>Chaoyang Wang</strong>, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
-	<strong>[
-	<a href="https://arxiv.org/pdf/1705.06839.pdf">arXiv:1705.06839v2</a>,
-	<a href="https://youtu.be/1q3GrYf9k-E">demo</a>
-	]
-</strong><br />
-First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
-Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
-Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
-Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p>
-	</td>
-</tr>
-
 
 <tr>
 	<td width="250"><img src="projects/cvpr18_rui/img2.png" width="200"></td>
@@ -108,6 +91,24 @@ across numerous natural sequences.
 <h2>Publications</h2>
 
 <table border="0">
+
+	<tr>
+		<td valign="top" width="250"><img src="projects/icra18/img2.png" width="200"></td>
+		<td valign="top" width="600">
+		<h3>Deep-LK for Efficient Adaptive Object Tracking</h3>
+		<p><strong>Chaoyang Wang</strong>, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
+		ICRA 2018
+		<strong>[
+		<a href="https://arxiv.org/pdf/1705.06839.pdf">arXiv:1705.06839v2</a>,
+		<a href="https://youtu.be/1q3GrYf9k-E">demo</a>
+		]
+	</strong><br />
+	<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
+	Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
+	Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
+	Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p> -->
+		</td>
+	</tr>
 
 <tr>
 	<td width="250"><img src="projects/wacv18/img.png" width="200"></td>
