--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ h3 {font-size:18px;font-family:arial;color:black;margin-top:0em;margin-bottom:0e
 	</tr>
 </table>
 
-<hr>
+<!-- <hr>
 <h2>Recent Works</h2>
 <table border="0">
 
@@ -63,10 +63,10 @@ Further, we demonstrate empirically that incorporation of a differentiable imple
 along with a novel depth normalization strategy - substantially
  improves performance over state of the art that use monocular videos for training. </p>
 	</td>
-</tr>
+</tr> -->
 
 
-<tr>
+<!-- <tr>
 	<td width="250"><img src="projects/cvpr18_rui/img2.png" width="200"></td>
 	<td valign="top" width="600">
 	<h3>Semantic Photometric Bundle Adjustment on Natural Sequences</h3>
@@ -86,11 +86,33 @@ across numerous natural sequences.
 	</p>
 	</td>
 </tr>
-</table>
+</table> -->
 <hr>
 <h2>Publications</h2>
 
 <table border="0">
+
+	<tr>
+		<td valign="top" width="250"><img src="projects/cvpr18_chaoyang/img2.png" width="200"></td>
+		<td valign="top" width="600">
+		<h3>Learning Depth from Monocular Videos using Direct Methods</h3>
+		<p><strong>Chaoyang Wang</strong>, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
+			CVPR 2018
+		<strong>[
+		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv:1712.00175</a>
+		]
+	</strong><br />
+	<!-- Unsupervised strategies to learning a depth estimator are particularly
+	appealing as they can utilize much larger and varied monocular video datasets during
+	learning without the need for ground truth depth or stereo. In previous works,
+	separate pose and depth CNN predictors had to be determined such that
+	their joint outputs minimized the photometric error. Inspired by
+	recent advances in direct mehtods for visual SLAM, we argue that the depth CNN predictor can be learned without a pose CNN predictor.
+	Further, we demonstrate empirically that incorporation of a differentiable implementation of DVO,
+	along with a novel depth normalization strategy - substantially
+	 improves performance over state of the art that use monocular videos for training. </p> -->
+		</td>
+	</tr>
 
 	<tr>
 		<td valign="top" width="250"><img src="projects/icra18/img2.png" width="200"></td>
@@ -167,7 +189,7 @@ across numerous natural sequences.
 </tr>
 
 </table>
-
+<!--
 <hr>
 <h2>Course Projects</h2>
 <table>
@@ -187,7 +209,7 @@ games.[<a href="projects/703/RL_project.pdf">PDF</a>]</p></td>
 <table>
 <tr><h3>Wasserstein Training of Deep Boltzmann Machines</h3></tr>
 <tr>
-	<!-- <td width="250"><img src="projects/703/img.png" width="200"></td> -->
+	<td width="250"><img src="projects/703/img.png" width="200"></td>
 	<td valign="top" width="850"> <p>We proposed a general Wasserstein training method for graphical models by replacing the standard KL-divergence with Wasserstein distance as novel loss functions.
 		And we developed Wasserstein training of
 RBMs and DBMs as specific examples. Finally,
@@ -209,10 +231,10 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 	<a href="https://wcy@bitbucket.org/wcy/learnpolicy.git">code</a>
 	)</li>
 <ul/>
-</table>
+</table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2017-12-5.</i>
+<i>Last modified by Wang Chaoyang, 2017-2-19.</i>
 
 <hr>
 <a href="https://clustrmaps.com/site/19x5b" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Rv_bWFfPipA9gtm9uwY6xRQGha_raL_Dx6yCs0fa4jY&cl=ffffff"></a>
