add ddvo result

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ across numerous natural sequences.
 </tr>
 </table> -->
 <hr>
+
 <h2>Publications</h2>
 
 <table border="0">
@@ -99,9 +100,15 @@ across numerous natural sequences.
 		<p><strong>Chaoyang Wang</strong>, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
 			CVPR 2018
 		<strong>[
-		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv:1712.00175</a>
+		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv:1712.00175</a>,
+		Code comming soon
 		]
 	</strong><br />
+	<strong>Result on KITTI Eigen split: <a href="https://drive.google.com/open?id=1Wj7ulSimrvrzNx4TRd-JspmX3DJwgPiV">[posenet(K)]</a>
+	<a href="https://drive.google.com/open?id=1wiODwgX_Vm_w7fVK1y_X5CNJTtgaPwcN">[ddvo(K)]</a>
+	<a href="https://drive.google.com/open?id=1uUQJLcUOoY2hG6QS_F-wbM3GDAjD-Z5h">[posenet+ddvo(K)]</a>
+	<a href="https://drive.google.com/open?id=1hp4zFgK5NSNGdvaQL2ZumeinMQY_-AwK">[posenet+ddvo(K+CS)]</a>
+</strong><br />
 	<!-- Unsupervised strategies to learning a depth estimator are particularly
 	appealing as they can utilize much larger and varied monocular video datasets during
 	learning without the need for ground truth depth or stereo. In previous works,
