add icra camera ready

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ across numerous natural sequences.
 		<p><strong>Chaoyang Wang</strong>, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
 			CVPR 2018
 		<strong>[
-		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv:1712.00175</a>,
+		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv</a>,
 		Code comming soon
 		]
 	</strong><br />
@@ -128,7 +128,8 @@ across numerous natural sequences.
 		<p><strong>Chaoyang Wang</strong>, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
 		ICRA 2018
 		<strong>[
-		<a href="https://arxiv.org/pdf/1705.06839.pdf">arXiv:1705.06839v2</a>,
+		<a href="http://www.ci2cv.net/media/papers/deepLK-icra.pdf">PDF</a>,
+		<a href="https://arxiv.org/pdf/1705.06839.pdf">arXiv</a>,
 		<a href="https://youtu.be/1q3GrYf9k-E">demo</a>
 		]
 	</strong><br />
