--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ across numerous natural sequences.
 			CVPR 2018
 		<strong>[
 		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv</a>,
-		Code comming soon
+	  <strong>[<a href="https://github.com/MightyChaos/LKVOLearner">code</a>]
 		]
 	</strong><br />
 	<strong>Result on KITTI Eigen split: <a href="https://drive.google.com/open?id=1Wj7ulSimrvrzNx4TRd-JspmX3DJwgPiV">[posenet(K)]</a>
