--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ h3 {font-size:18px;font-family:arial;color:black;margin-top:0em;margin-bottom:0e
 			</tr>
 			<tr>
 				<ul style="list-style-type:none">
-					<li>MSR student of <a href="https://www.ri.cmu.edu/">the Robotics Institute Carnegie Mellon University</a></li>
+					<li>Phd student of <a href="https://www.ri.cmu.edu/">the Robotics Institute Carnegie Mellon University</a></li>
 					<li>Supervised by <a href="http://www.simonlucey.com/">Prof. Simon Lucey</a></li>
 					<li>Research interest: computer vision, machine learning.</li>
 					<li>Contact: chaoyanw[at]andrew.cmu.edu</li>
@@ -101,7 +101,7 @@ across numerous natural sequences.
 			CVPR 2018
 		<strong>[
 		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv</a>,
-	  <strong>[<a href="https://github.com/MightyChaos/LKVOLearner">code</a>]
+	  <strong><a href="https://github.com/MightyChaos/LKVOLearner">code</a>
 		]
 	</strong><br />
 	<strong>Result on KITTI Eigen split: <a href="https://drive.google.com/open?id=1Wj7ulSimrvrzNx4TRd-JspmX3DJwgPiV">[posenet(K)]</a>
@@ -242,7 +242,7 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2017-2-19.</i>
+<i>Last modified by Wang Chaoyang, 2018-6-27.</i>
 
 <hr>
 <a href="https://clustrmaps.com/site/19x5b" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Rv_bWFfPipA9gtm9uwY6xRQGha_raL_Dx6yCs0fa4jY&cl=ffffff"></a>
