--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h3 {font-size:18px;font-family:arial;color:black;margin-top:0em;margin-bottom:0e
 					<li>Supervised by <a href="http://www.simonlucey.com/">Prof. Simon Lucey</a></li>
 					<li>Research interest: computer vision, machine learning.</li>
 					<li>Contact: chaoyanw[at]andrew.cmu.edu</li>
-					<li><strong><a href="cv.pdf">resume</a></strong></li>
+					<!-- <li><strong><a href="cv.pdf">resume</a></strong></li> -->
 				</ul>
 			</tr>
 		</table>
