--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ p {font-size:14px;font-family:arial;color:black;}
 li {font-size:14px;font-family:arial;color:black;}
 h1 {font-size:30px;font-family:arial;color:gray;}
 h2 {font-size:25px;font-family:arial;color:gray;}
-h3 {font-size:18px;font-family:arial;color:black;margin-top:0em;margin-bottom:0em}
+h3 {font-size:14px;font-family:arial;color:black;margin-top:0;margin-bottom:0}
 </style>
 </head>
 
@@ -19,7 +19,7 @@ h3 {font-size:18px;font-family:arial;color:black;margin-top:0em;margin-bottom:0e
 <table border="0">
 	<tr>
 		<td width="200">
-		<img src="night_king.jpg" alt="Smiley face" width="150" height="150">
+		<img src="night_king2.png" alt="Smiley face" height="150">
 		</td>
 		<td width="500">
 		<table border="0">
@@ -94,10 +94,29 @@ across numerous natural sequences.
 <table border="0">
 
 	<tr>
-		<td valign="top" width="250"><img src="projects/cvpr18_chaoyang/img2.png" width="200"></td>
+		<td valign="top" width="200"><img src="" width="200"></td>
+		<td valign="top" width="600">
+		<h3>Deep Convolutional Compressed Sensing for LiDAR Depth Completion</h3>
+		<p>Nathaniel Chodosh, Chaoyang Wang, Simon Lucey<br />
+		ACCV 2018
+		<strong>[
+		<a href="http://www.ci2cv.net/media/papers/nate_accv_2018.pdf">PDF</a>,
+		<a href="https://github.com/nchodosh/Super-LiDAR">code</a>
+		]
+	</strong><br />
+	<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
+	Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
+	Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
+	Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p> -->
+		</td>
+	</tr>
+
+
+	<tr>
+		<td valign="top" width="200"><img src="projects/cvpr18_chaoyang/img2.png" width="150"></td>
 		<td valign="top" width="600">
 		<h3>Learning Depth from Monocular Videos using Direct Methods</h3>
-		<p><strong>Chaoyang Wang</strong>, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
+		<p>Chaoyang Wang, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
 			CVPR 2018
 		<strong>[
 		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv</a>,
@@ -122,10 +141,10 @@ across numerous natural sequences.
 	</tr>
 
 	<tr>
-		<td valign="top" width="250"><img src="projects/icra18/img2.png" width="200"></td>
+		<td valign="top" width="200"><img src="projects/icra18/img2.png" width="150"></td>
 		<td valign="top" width="600">
 		<h3>Deep-LK for Efficient Adaptive Object Tracking</h3>
-		<p><strong>Chaoyang Wang</strong>, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
+		<p>Chaoyang Wang, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
 		ICRA 2018
 		<strong>[
 		<a href="http://www.ci2cv.net/media/papers/deepLK-icra.pdf">PDF</a>,
@@ -141,10 +160,10 @@ across numerous natural sequences.
 	</tr>
 
 <tr>
-	<td width="250"><img src="projects/wacv18/img.png" width="200"></td>
+	<td valign="top" width="200"><img src="projects/wacv18/img.png" width="150"></td>
 	<td valign="top" width="600">
 	<h3>Object-Centric Photometric Bundle Adjustment with Deep Shape Prior</h3>
-	<p>Rui Zhu, <strong>Chaoyang Wang</strong>,  Chen-Hsuan Lin, Simon Lucey<br />
+	<p>Rui Zhu, Chaoyang Wang,  Chen-Hsuan Lin, Simon Lucey<br />
 	WACV 2018
 	<strong>[
 	<a href="https://arxiv.org/abs/1711.01470">PDF</a>
@@ -154,10 +173,10 @@ across numerous natural sequences.
 </tr>
 <!--cur project1-->
 <tr>
-	<td width="250"><img src="projects/iccv17/iccv17.png" width="200"></td>
+	<td valign="top" width="200"><img src="projects/iccv17/iccv17.png" width="150"></td>
 	<td valign="top" width="600">
 	<h3>Rethinking Reprojection: Closing the Loop for Pose-aware Shape Reconstruction from a Single Image</h3>
-	<p>Rui Zhu, Hamed Kiani, <strong>Chaoyang Wang</strong>, Simon Lucey<br />
+	<p>Rui Zhu, Hamed Kiani, Chaoyang Wang, Simon Lucey<br />
 	ICCV 2017
 	<strong>[
 	<a href="https://arxiv.org/abs/1707.04682">PDF</a>
@@ -168,10 +187,10 @@ across numerous natural sequences.
 
 <!--cur project1-->
 <tr>
-	<td width="250"><img src="projects/objprop/img.png" width="200"></td>
+	<td valign="top" width="200"><img src="projects/objprop/img.png" width="150"></td>
 	<td valign="top" width="600">
 	<h3>Object Proposal by Multi-branched Hierarchical Segmentation</h3>
-	<p><strong>Chaoyang Wang</strong>, Long Zhao, Shuang Liang, Liqing Zhang, Jinyuan Jia, Yichen Wei<br />
+	<p>Chaoyang Wang, Long Zhao, Shuang Liang, Liqing Zhang, Jinyuan Jia, Yichen Wei<br />
 	CVPR 2015
 	<strong>[
 	<a href="projects/objprop/Wang_Object_Proposal_by_2015_CVPR_paper.pdf">PDF</a>,
@@ -182,10 +201,10 @@ across numerous natural sequences.
 </tr>
 <!--project 2 -->
 <tr>
-	<td width="250"><img src="projects/bpstereo/img1.png" width="200"></td>
+	<td valign="top" width="200"><img src="projects/bpstereo/img1.png" width="150"></td>
 	<td valign="top" width="600">
 	<h3>Binocular Photometric Stereo Acquisition and Reconstruction for 3D Talking Head Applications</h3>
-	<p><strong>Chaoyang Wang</strong>, Lijuan Wang, Yasuyuki Matsushita, Bojun Huang, Magnetro Chen, Frank K. Soong<br /> INTERSPEECH 2013
+	<p>Chaoyang Wang, Lijuan Wang, Yasuyuki Matsushita, Bojun Huang, Magnetro Chen, Frank K. Soong<br /> INTERSPEECH 2013
 	<strong>[
 	<a href="projects/bpstereo/IS130859.PDF">PDF</a>,
 	<a href="http://research.microsoft.com/en-us/projects/hd_talking_head/">web</a>,
@@ -242,7 +261,7 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2018-6-27.</i>
+<i>Last modified by Wang Chaoyang, 2018-11-20.</i>
 
 <hr>
 <a href="https://clustrmaps.com/site/19x5b" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Rv_bWFfPipA9gtm9uwY6xRQGha_raL_Dx6yCs0fa4jY&cl=ffffff"></a>
