add night king 2

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@ across numerous natural sequences.
 		<p>Chaoyang Wang, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
 			CVPR 2018
 		<strong>[
-		<a href="https://arxiv.org/pdf/1712.00175.pdf">arXiv</a>,
-	  <strong><a href="https://github.com/MightyChaos/LKVOLearner">code</a>
+		<a href="http://openaccess.thecvf.com/content_cvpr_2018/papers/Wang_Learning_Depth_From_CVPR_2018_paper.pdf">PDF</a>,
+	  <strong><a href="https://github.com/MightyChaos/LKVOLearner">code&result</a>
 		]
-	</strong><br />
+	<!-- </strong><br />
 	<strong>Result on KITTI Eigen split: <a href="https://drive.google.com/open?id=1Wj7ulSimrvrzNx4TRd-JspmX3DJwgPiV">[posenet(K)]</a>
 	<a href="https://drive.google.com/open?id=1wiODwgX_Vm_w7fVK1y_X5CNJTtgaPwcN">[ddvo(K)]</a>
 	<a href="https://drive.google.com/open?id=1uUQJLcUOoY2hG6QS_F-wbM3GDAjD-Z5h">[posenet+ddvo(K)]</a>
 	<a href="https://drive.google.com/open?id=1hp4zFgK5NSNGdvaQL2ZumeinMQY_-AwK">[posenet+ddvo(K+CS)]</a>
-</strong><br />
+</strong><br /> -->
 	<!-- Unsupervised strategies to learning a depth estimator are particularly
 	appealing as they can utilize much larger and varied monocular video datasets during
 	learning without the need for ground truth depth or stereo. In previous works,
@@ -166,7 +166,8 @@ across numerous natural sequences.
 	<p>Rui Zhu, Chaoyang Wang,  Chen-Hsuan Lin, Simon Lucey<br />
 	WACV 2018
 	<strong>[
-	<a href="https://arxiv.org/abs/1711.01470">PDF</a>
+	<a href="https://arxiv.org/abs/1711.01470">PDF,  </a>
+		<a href="https://arxiv.org/pdf/1712.00110.pdf"> Extended version</a>
 	]
 	</strong></p>
 	</td>
