--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ h3 {font-size:14px;font-family:arial;color:black;margin-top:0;margin-bottom:0}
 <table border="0">
 	<tr>
 		<td width="200">
-		<img src="night_king2.png" alt="Smiley face" height="150">
+		<img src="night_king.jpg" alt="Smiley face" height="150">
 		</td>
 		<td width="500">
 		<table border="0">
@@ -92,6 +92,39 @@ across numerous natural sequences.
 <h2>Publications</h2>
 
 <table border="0">
+	<tr>
+			<td valign="top" width="200"><img src="" width="200"></td>
+			<td valign="top" width="600">
+			<h3>Distill Knowledge from NRSfM for Weakly Supervised 3D Pose Learning</h3>
+			<p>Chaoyang Wang, Chen Kong, Simon Lucey<br />
+			ICCV 2019
+			<strong>[
+			<a href="https://mightychaos.github.io/">code coming soon</a>
+			]
+		</strong><br />
+		<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
+		Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
+		Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
+		Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p> -->
+			</td>
+	</tr>
+
+	<tr>
+			<td valign="top" width="200"><img src="" width="200"></td>
+			<td valign="top" width="600">
+			<h3>Web Stereo Video Supervision for Depth Prediction from Dynamic Scenes</h3>
+			<p>Chaoyang Wang, Simon Lucey, Federico Perazzi, Oliver Wang<br />
+			3DV 2019
+			<strong>[
+			<a href="https://github.com/nchodosh/Super-LiDAR">project</a>
+			]
+		</strong><br />
+		<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
+		Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
+		Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
+		Finally, we show impressive results demonstrating that, with end-to-end learned features, Deep-LK substantially outperforms GOTURN and demonstrates comparable tracking performance against current state-of-the-art deep trackers on high frame-rate sequences whilst being an order of magnitude (100 FPS) computationally efficient.</p> -->
+			</td>
+	</tr>
 
 	<tr>
 		<td valign="top" width="200"><img src="" width="200"></td>
@@ -262,7 +295,7 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2018-11-20.</i>
+<i>Last modified by Wang Chaoyang, 2019-08-15.</i>
 
 <hr>
 <a href="https://clustrmaps.com/site/19x5b" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Rv_bWFfPipA9gtm9uwY6xRQGha_raL_Dx6yCs0fa4jY&cl=ffffff"></a>
