update iccv 3dv

--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@ h3 {font-size:14px;font-family:arial;color:black;margin-top:0;margin-bottom:0}
 			</tr>
 			<tr>
 				<ul style="list-style-type:none">
-					<li>Phd student of <a href="https://www.ri.cmu.edu/">the Robotics Institute Carnegie Mellon University</a></li>
-					<li>Supervised by <a href="http://www.simonlucey.com/">Prof. Simon Lucey</a></li>
+					<li>Phd student of <a href="https://www.ri.cmu.edu/">the Robotics Institute Carnegie Mellon University</a>.</li>
+					<li>I'm a current member of <a href="http://www.ci2cv.net/">CI2CV Lab</a> led by Prof. Simon Lucey.</li>
+					<li>Prior to CMU, I obtained my B.E. and M.S. degree from Shanghai Jiao Tong University, supervised by <a href="https://scholar.google.com/citations?user=1smFmxAAAAAJ&hl=en">Prof. Liqing Zhang</a>.
+					<li>I've collaborated with <a href="http://www.oliverwang.info/">Oliver Wang</a> and <a href="https://fperazzi.github.io/">Federico Perazzi</a> at Adobe Inc.
+						<a href="https://yichenwei.github.io">Yichen Wei</a>, <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, <a href="http://www-infobiz.ist.osaka-u.ac.jp/en/member/matsushita/">Yasuyuki Matsushita</a>, <a href="https://www.microsoft.com/en-us/research/people/frankkps/">Frank K. Soong</a> at Microsoft Research Asia.
 					<li>Research interest: computer vision, machine learning.</li>
 					<li>Contact: chaoyanw[at]andrew.cmu.edu</li>
 					<!-- <li><strong><a href="cv.pdf">resume</a></strong></li> -->
@@ -116,7 +119,7 @@ across numerous natural sequences.
 			<p>Chaoyang Wang, Simon Lucey, Federico Perazzi, Oliver Wang<br />
 			3DV 2019
 			<strong>[
-			<a href="https://github.com/nchodosh/Super-LiDAR">project</a>
+			<a href="https://sites.google.com/view/wsvd/">project</a>
 			]
 		</strong><br />
 		<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
