--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@ li {font-size:14px;font-family:arial;color:black;}
 h1 {font-size:30px;font-family:arial;color:gray;}
 h2 {font-size:25px;font-family:arial;color:gray;}
 h3 {font-size:14px;font-family:arial;color:black;margin-top:0;margin-bottom:0}
+a {
+            color: #1772d0;
+            text-decoration: none;
+        }
+
+        a:focus,
+        a:hover {
+            color: #f09228;
+            text-decoration: none;
+        }
+
+papertitle {
+	font-family: 'Lato', Verdana, Helvetica, sans-serif;
+	font-size: 15px;
+	font-weight: 700
+}
+
+name {
+	font-family: 'Lato', Verdana, Helvetica, sans-serif;
+	font-size: 32px;
+}
+
 </style>
 </head>
 
@@ -27,16 +49,20 @@ h3 {font-size:14px;font-family:arial;color:black;margin-top:0;margin-bottom:0}
 			<h1>Chaoyang Wang</h1>
 			</tr>
 			<tr>
-				<ul style="list-style-type:none">
-					<li>Phd student of <a href="https://www.ri.cmu.edu/">the Robotics Institute Carnegie Mellon University</a>.</li>
-					<li>I'm a current member of <a href="http://www.ci2cv.net/">CI2CV Lab</a> led by Prof. Simon Lucey.</li>
-					<li>Prior to CMU, I obtained my B.E. and M.S. degree from Shanghai Jiao Tong University, supervised by <a href="https://scholar.google.com/citations?user=1smFmxAAAAAJ&hl=en">Prof. Liqing Zhang</a>.
-					<li>I've collaborated with <a href="http://www.oliverwang.info/">Oliver Wang</a> and <a href="https://fperazzi.github.io/">Federico Perazzi</a> at Adobe Inc.
-						<a href="https://yichenwei.github.io">Yichen Wei</a>, <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>, <a href="http://www-infobiz.ist.osaka-u.ac.jp/en/member/matsushita/">Yasuyuki Matsushita</a>, <a href="https://www.microsoft.com/en-us/research/people/frankkps/">Frank K. Soong</a> at Microsoft Research Asia.
-					<li>Research interest: computer vision, machine learning.</li>
-					<li>Contact: chaoyanw[at]andrew.cmu.edu</li>
+				<!-- <ul style="list-style-type:none"> -->
+					<p>Phd student of <a href="https://www.ri.cmu.edu/", target="_blank"> Robotics Institute of Carnegie Mellon University</a>.
+					<br>
+					I'm a current member of <a href="http://www.ci2cv.net/">CI2CV Lab</a> led by Prof. Simon Lucey.
+					Prior to CMU, I obtained my B.E. and M.S. degree from Shanghai Jiao Tong University, supervised by <a href="https://scholar.google.com/citations?user=1smFmxAAAAAJ&hl=en">Prof. Liqing Zhang</a>.
+					I've collaborated with <a href="http://www.oliverwang.info/">Oliver Wang</a> and <a href="https://fperazzi.github.io/">Federico Perazzi</a> at Adobe Inc.
+						<a href="https://yichenwei.github.io">Yichen Wei</a>, <a href="https://www.microsoft.com/en-us/research/people/lijuanw/">Lijuan Wang</a>,
+						<a href="http://www-infobiz.ist.osaka-u.ac.jp/en/member/matsushita/">Yasuyuki Matsushita</a>, 
+						<a href="https://www.microsoft.com/en-us/research/people/frankkps/">Frank K. Soong</a> at Microsoft Research Asia.
+					<p>Research interest: computer vision, machine learning.
+					<br>
+					Contact: chaoyanw[at]andrew.cmu.edu</p>
 					<!-- <li><strong><a href="cv.pdf">resume</a></strong></li> -->
-				</ul>
+				<!-- </ul> -->
 			</tr>
 		</table>
 		</td>
@@ -98,14 +124,18 @@ across numerous natural sequences.
 	<tr>
 			<td valign="top" width="200"><img src="" width="200"></td>
 			<td valign="top" width="600">
-			<h3>Distill Knowledge from NRSfM for Weakly Supervised 3D Pose Learning</h3>
-			<p>Chaoyang Wang, Chen Kong, Simon Lucey<br />
+			<p>
+			<papertitle>Distill Knowledge from NRSfM for Weakly Supervised 3D Pose Learning</papertitle>
+			<br>
+			Chaoyang Wang, Chen Kong, Simon Lucey
+			<br>
 			ICCV 2019
 			<strong>[
 			<a href="https://arxiv.org/pdf/1908.06377.pdf">arxiv</a>,
 			<a href="https://mightychaos.github.io/">code coming</a>
 			]
-		</strong><br />
+		</strong>
+		</p>
 		<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
 		Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
 		Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
@@ -116,14 +146,17 @@ across numerous natural sequences.
 	<tr>
 			<td valign="top" width="200"><img src="" width="200"></td>
 			<td valign="top" width="600">
-			<h3>Web Stereo Video Supervision for Depth Prediction from Dynamic Scenes</h3>
-			<p>Chaoyang Wang, Simon Lucey, Federico Perazzi, Oliver Wang<br />
+			<p>
+			<papertitle>Web Stereo Video Supervision for Depth Prediction from Dynamic Scenes</papertitle>
+			<br>
+			Chaoyang Wang, Simon Lucey, Federico Perazzi, Oliver Wang<br>
 			3DV 2019
 			<strong>[
 			<a href="http://www.ci2cv.net/media/papers/3dv_webstereo.pdf">PDF</a>,
 			<a href="https://sites.google.com/view/wsvd/">project</a>
 			]
-		</strong><br />
+		</strong>
+		</p>
 		<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
 		Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
 		Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
@@ -134,14 +167,17 @@ across numerous natural sequences.
 	<tr>
 		<td valign="top" width="200"><img src="" width="200"></td>
 		<td valign="top" width="600">
-		<h3>Deep Convolutional Compressed Sensing for LiDAR Depth Completion</h3>
-		<p>Nathaniel Chodosh, Chaoyang Wang, Simon Lucey<br />
+		<p>
+		<papertitle>Deep Convolutional Compressed Sensing for LiDAR Depth Completion</papertitle>
+		<br>
+		Nathaniel Chodosh, Chaoyang Wang, Simon Lucey<br>
 		ACCV 2018
 		<strong>[
 		<a href="http://www.ci2cv.net/media/papers/nate_accv_2018.pdf">PDF</a>,
 		<a href="https://github.com/nchodosh/Super-LiDAR">code</a>
 		]
-	</strong><br />
+	</strong>
+	</p>
 	<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
 	Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
 	Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
@@ -153,13 +189,16 @@ across numerous natural sequences.
 	<tr>
 		<td valign="top" width="200"><img src="projects/cvpr18_chaoyang/img2.png" width="150"></td>
 		<td valign="top" width="600">
-		<h3>Learning Depth from Monocular Videos using Direct Methods</h3>
-		<p>Chaoyang Wang, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br />
+		<p>
+		<papertitle>Learning Depth from Monocular Videos using Direct Methods</papertitle>
+		<br>
+		Chaoyang Wang, Jose Miguel Buenaposada, Rui Zhu, Simon Lucey<br>
 			CVPR 2018
 		<strong>[
 		<a href="http://openaccess.thecvf.com/content_cvpr_2018/papers/Wang_Learning_Depth_From_CVPR_2018_paper.pdf">PDF</a>,
 	  <strong><a href="https://github.com/MightyChaos/LKVOLearner">code&result</a>
 		]
+		</p>
 	<!-- </strong><br />
 	<strong>Result on KITTI Eigen split: <a href="https://drive.google.com/open?id=1Wj7ulSimrvrzNx4TRd-JspmX3DJwgPiV">[posenet(K)]</a>
 	<a href="https://drive.google.com/open?id=1wiODwgX_Vm_w7fVK1y_X5CNJTtgaPwcN">[ddvo(K)]</a>
@@ -181,8 +220,10 @@ across numerous natural sequences.
 	<tr>
 		<td valign="top" width="200"><img src="projects/icra18/img2.png" width="150"></td>
 		<td valign="top" width="600">
-		<h3>Deep-LK for Efficient Adaptive Object Tracking</h3>
-		<p>Chaoyang Wang, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
+		<p>
+		<papertitle>Deep-LK for Efficient Adaptive Object Tracking</papertitle>
+		<br>
+		Chaoyang Wang, Hamed Kiani, Chen-Hsuan Lin, Simon Lucey<br />
 		ICRA 2018
 		<strong>[
 		<a href="http://www.ci2cv.net/media/papers/deepLK-icra.pdf">PDF</a>,
@@ -190,6 +231,7 @@ across numerous natural sequences.
 		<a href="https://youtu.be/1q3GrYf9k-E">demo</a>
 		]
 	</strong><br />
+	<br>
 	<!-- First, we demonstrate that there is a theoretical relationship between siamese regression networks like GOTURN and the classical Inverse Compositional Lucas & Kanade (IC-LK) algorithm.
 	Further, we demonstrate that unlike GOTURN IC-LK adapts its regressor to the appearance of the current tracked frame.
 	Second, we propose a novel framework for object tracking inspired by the IC-LK framework, which we refer to as Deep-LK.
@@ -200,27 +242,33 @@ across numerous natural sequences.
 <tr>
 	<td valign="top" width="200"><img src="projects/wacv18/img.png" width="150"></td>
 	<td valign="top" width="600">
-	<h3>Object-Centric Photometric Bundle Adjustment with Deep Shape Prior</h3>
-	<p>Rui Zhu, Chaoyang Wang,  Chen-Hsuan Lin, Simon Lucey<br />
+	<p>
+	<papertitle>Object-Centric Photometric Bundle Adjustment with Deep Shape Prior</papertitle>
+	<br>
+	Rui Zhu, Chaoyang Wang,  Chen-Hsuan Lin, Simon Lucey<br />
 	WACV 2018
 	<strong>[
 	<a href="https://arxiv.org/abs/1711.01470">PDF,  </a>
 		<a href="https://arxiv.org/pdf/1712.00110.pdf"> Extended version</a>
 	]
-	</strong></p>
+	</strong>
 	</td>
+	</p>
 </tr>
 <!--cur project1-->
 <tr>
 	<td valign="top" width="200"><img src="projects/iccv17/iccv17.png" width="150"></td>
 	<td valign="top" width="600">
-	<h3>Rethinking Reprojection: Closing the Loop for Pose-aware Shape Reconstruction from a Single Image</h3>
-	<p>Rui Zhu, Hamed Kiani, Chaoyang Wang, Simon Lucey<br />
+	<p>
+	<papertitle>Rethinking Reprojection: Closing the Loop for Pose-aware Shape Reconstruction from a Single Image</papertitle>
+	<br>
+	Rui Zhu, Hamed Kiani, Chaoyang Wang, Simon Lucey<br />
 	ICCV 2017
 	<strong>[
 	<a href="https://arxiv.org/abs/1707.04682">PDF</a>
 	]
-	</strong></p>
+	</strong>
+	</p>
 	</td>
 </tr>
 
@@ -228,8 +276,10 @@ across numerous natural sequences.
 <tr>
 	<td valign="top" width="200"><img src="projects/objprop/img.png" width="150"></td>
 	<td valign="top" width="600">
-	<h3>Object Proposal by Multi-branched Hierarchical Segmentation</h3>
-	<p>Chaoyang Wang, Long Zhao, Shuang Liang, Liqing Zhang, Jinyuan Jia, Yichen Wei<br />
+	<p>
+	<papertitle>Object Proposal by Multi-branched Hierarchical Segmentation</papertitle>
+	<br>
+	Chaoyang Wang, Long Zhao, Shuang Liang, Liqing Zhang, Jinyuan Jia, Yichen Wei<br />
 	CVPR 2015
 	<strong>[
 	<a href="projects/objprop/Wang_Object_Proposal_by_2015_CVPR_paper.pdf">PDF</a>,
@@ -242,8 +292,11 @@ across numerous natural sequences.
 <tr>
 	<td valign="top" width="200"><img src="projects/bpstereo/img1.png" width="150"></td>
 	<td valign="top" width="600">
-	<h3>Binocular Photometric Stereo Acquisition and Reconstruction for 3D Talking Head Applications</h3>
-	<p>Chaoyang Wang, Lijuan Wang, Yasuyuki Matsushita, Bojun Huang, Magnetro Chen, Frank K. Soong<br /> INTERSPEECH 2013
+	<p>
+	<papertitle>Binocular Photometric Stereo Acquisition and Reconstruction for 3D Talking Head Applications</papertitle>
+	<br>
+	Chaoyang Wang, Lijuan Wang, Yasuyuki Matsushita, Bojun Huang, Magnetro Chen, Frank K. Soong<br /> 
+	INTERSPEECH 2013
 	<strong>[
 	<a href="projects/bpstereo/IS130859.PDF">PDF</a>,
 	<a href="http://research.microsoft.com/en-us/projects/hd_talking_head/">web</a>,
@@ -300,9 +353,14 @@ training.[<a href="projects/708/pgm_project_final.pdf">PDF</a>]</p> </td>
 </table> -->
 
 <hr>
-<i>Last modified by Wang Chaoyang, 2019-08-15.</i>
+<i>Last modified by Wang Chaoyang, 2019-08-27.</i>
 
-<hr>
+<!-- <hr>
+<table border="0">
+<tr>
 <a href="https://clustrmaps.com/site/19x5b" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Rv_bWFfPipA9gtm9uwY6xRQGha_raL_Dx6yCs0fa4jY&cl=ffffff"></a>
+</tr>
+</table> -->
+
 </body>
 </html>
